--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,6 @@
   "intensity_range_1": 170,
   "intensity_range_2": 180,
   "slice_count": 1,
-  "show_center_line": true
+  "show_center_line": true,
+  "show_beam_stopper_mask": true
 }
