feature - default parameters save and load

--- a/settings.json
+++ b/settings.json
@@ -2,8 +2,17 @@
   "intensity_range_1": 100,
   "intensity_range_2": 110,
   "slice_count": 1,
-  "show_center_line": true,
+  "show_center_line": false,
   "show_beam_stopper_mask": true,
+  "calibration_factor": 0.00319,
+  "calibration_factor_step": "0.001",
+  "fit_at_q_step": "0.1",
+  "N_step": "1",
+  "dr_step": "0.01",
+  "damping": 0.2,
+  "damping_step": "0.1",
+  "rmax": 10.0,
+  "rmax_step": "1",
   "recent_file1": "",
   "recent_file2": "",
   "recent_file3": "",
